--- a/QJY.Data/App.Config
+++ b/QJY.Data/App.Config
@@ -5,7 +5,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="QJY_SaaSEntities" connectionString="metadata=res://*/QJY.Data.csdl|res://*/QJY.Data.ssdl|res://*/QJY.Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=47.92.121.230;Initial Catalog=QJY_UserS;User ID=sa;Password=qijieyun@2017;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QJY_SaaSEntities" connectionString="metadata=res://*/QJY.Data.csdl|res://*/QJY.Data.ssdl|res://*/QJY.Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=;Initial Catalog=;User ID=sa;Password=;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
   </connectionStrings>
   <entityFramework>
