添加CRM模块前端页面

--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -209,6 +209,24 @@
     <Content Include="ViewV5\AppPage\CCXJ\CCXJLIST.html" />
     <Content Include="ViewV5\AppPage\CCXJ\CCXJUserLIST.html" />
     <Content Include="ViewV5\AppPage\CCXJ\CCXJVIEW.html" />
+    <Content Include="ViewV5\AppPage\CRM\CPGL.html" />
+    <Content Include="ViewV5\AppPage\CRM\CPGLLIST.html" />
+    <Content Include="ViewV5\AppPage\CRM\CPGLVIEW.html" />
+    <Content Include="ViewV5\AppPage\CRM\GJJL.html" />
+    <Content Include="ViewV5\AppPage\CRM\GJJLLIST.html" />
+    <Content Include="ViewV5\AppPage\CRM\GJJLVIEW.html" />
+    <Content Include="ViewV5\AppPage\CRM\HTGJ.html" />
+    <Content Include="ViewV5\AppPage\CRM\HTGL.html" />
+    <Content Include="ViewV5\AppPage\CRM\HTGLLIST.html" />
+    <Content Include="ViewV5\AppPage\CRM\HTGLVIEW.html" />
+    <Content Include="ViewV5\AppPage\CRM\KHCCLIST.html" />
+    <Content Include="ViewV5\AppPage\CRM\KHGL.html" />
+    <Content Include="ViewV5\AppPage\CRM\KHGLLIST.html" />
+    <Content Include="ViewV5\AppPage\CRM\KHGLVIEW.html" />
+    <Content Include="ViewV5\AppPage\CRM\KHLXR.html" />
+    <Content Include="ViewV5\AppPage\CRM\KHLXRLIST.html" />
+    <Content Include="ViewV5\AppPage\CRM\KHLXRVIEW.html" />
+    <Content Include="ViewV5\AppPage\CRM\XZLXRLIST.html" />
     <Content Include="ViewV5\AppPage\DBGL\DBGLLIST.html" />
     <Content Include="ViewV5\AppPage\DXGL\DXGL.html" />
     <Content Include="ViewV5\AppPage\DXGL\DXGLLIST.html" />
