--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -252,12 +252,12 @@
     <Content Include="ViewV5\AppPage\LCSP\APP_LCSP_SEL.html" />
     <Content Include="ViewV5\AppPage\LCSP\APP_WF_LCSZ.html" />
     <Content Include="ViewV5\AppPage\LCSP\ExtendSet.html" />
+    <Content Include="ViewV5\AppPage\LCSP\LCSP.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPLIST.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPTJ.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPTJLIST.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPTJ_BAK.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPVIEW.html" />
-    <Content Include="ViewV5\AppPage\LCSP\LCSZ.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSZSelect.html" />
     <Content Include="ViewV5\AppPage\LCSP\PDSZ.html" />
     <Content Include="ViewV5\AppPage\LCSP\PROCESS.html" />
