修复创建部门粗错的BUG

--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -261,6 +261,7 @@
     <Content Include="ViewV5\AppPage\LCSP\LCSZSelect.html" />
     <Content Include="ViewV5\AppPage\LCSP\PDSZ.html" />
     <Content Include="ViewV5\AppPage\LCSP\PROCESS.html" />
+    <Content Include="ViewV5\AppPage\Loading.html" />
     <Content Include="ViewV5\AppPage\QYWD\FolderSel.html" />
     <Content Include="ViewV5\AppPage\QYWD\QYSC.html" />
     <Content Include="ViewV5\AppPage\QYWD\QYWDGX.html" />
