把官方宣传网站也弄进来了

--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -112,6 +112,62 @@
     <Content Include="Global.asax" />
     <Content Include="API\VIEWAPI.ashx" />
     <Content Include="API\WXAPI.ashx" />
+    <Content Include="WZWeb\CSS\bootstrap.css" />
+    <Content Include="WZWeb\CSS\dialog.css" />
+    <Content Include="WZWeb\CSS\font-awesome.min.css" />
+    <Content Include="WZWeb\CSS\index.css" />
+    <Content Include="WZWeb\history.html" />
+    <Content Include="WZWeb\images\button_pm_close.png" />
+    <Content Include="WZWeb\images\choose-us.png" />
+    <Content Include="WZWeb\images\choose-us1.png" />
+    <Content Include="WZWeb\images\close_im.png" />
+    <Content Include="WZWeb\images\com.png" />
+    <Content Include="WZWeb\images\File.png" />
+    <Content Include="WZWeb\images\File2.png" />
+    <Content Include="WZWeb\images\open_im.png" />
+    <Content Include="WZWeb\images\qq-icon-bg.png" />
+    <Content Include="WZWeb\images\qq.png" />
+    <Content Include="WZWeb\images\qrcode.jpg" />
+    <Content Include="WZWeb\images\slider-arrow.png" />
+    <Content Include="WZWeb\images\top_bg_pro.jpg" />
+    <Content Include="WZWeb\images\totop-icon.png" />
+    <Content Include="WZWeb\images\version_dot.png" />
+    <Content Include="WZWeb\images\version_dot_alt.png" />
+    <Content Include="WZWeb\images\version_line.png" />
+    <Content Include="WZWeb\images\weixing-icon.png" />
+    <Content Include="WZWeb\images\zs_2.png" />
+    <Content Include="WZWeb\images\zs_3.png" />
+    <Content Include="WZWeb\images\zs_4.png" />
+    <Content Include="WZWeb\images\zs_5.png" />
+    <Content Include="WZWeb\index.html" />
+    <Content Include="WZWeb\JS\dialog.js" />
+    <Content Include="WZWeb\JS\hm.js" />
+    <Content Include="WZWeb\JS\jquery-1.8.3.min.js" />
+    <Content Include="WZWeb\JS\jquery.SuperSlide.2.1.1.js" />
+    <Content Include="WZWeb\mob\css\index.css" />
+    <Content Include="WZWeb\mob\images\index.png" />
+    <Content Include="WZWeb\mob\images\index1.png" />
+    <Content Include="WZWeb\mob\images\page3.png" />
+    <Content Include="WZWeb\mob\images\yd1.png" />
+    <Content Include="WZWeb\mob\images\yd10.png" />
+    <Content Include="WZWeb\mob\images\yd11.png" />
+    <Content Include="WZWeb\mob\images\yd12.png" />
+    <Content Include="WZWeb\mob\images\yd2.png" />
+    <Content Include="WZWeb\mob\images\yd3.png" />
+    <Content Include="WZWeb\mob\images\yd4.png" />
+    <Content Include="WZWeb\mob\images\yd5.png" />
+    <Content Include="WZWeb\mob\images\yd6.png" />
+    <Content Include="WZWeb\mob\images\yd7.png" />
+    <Content Include="WZWeb\mob\images\yd8.png" />
+    <Content Include="WZWeb\mob\images\yd9.png" />
+    <Content Include="WZWeb\mob\images\zs_2.png" />
+    <Content Include="WZWeb\mob\images\zs_3.png" />
+    <Content Include="WZWeb\mob\images\zs_4.png" />
+    <Content Include="WZWeb\mob\images\zs_5.png" />
+    <Content Include="WZWeb\mob\zhuce.html" />
+    <Content Include="WZWeb\mob\js\jquery-1.11.1.min.js" />
+    <Content Include="WZWeb\mob\js\jquery.touchSwipe.min.js" />
+    <Content Include="WZWeb\mob\success.html" />
     <None Include="Properties\PublishProfiles\QJSignle.pubxml" />
     <None Include="Properties\PublishProfiles\QJ_UserS.pubxml" />
     <None Include="Properties\Settings.settings">
