--- a/QJY.WEB/QJY.WEB.csproj
+++ b/QJY.WEB/QJY.WEB.csproj
@@ -113,7 +113,9 @@
     <Content Include="API\VIEWAPI.ashx" />
     <Content Include="API\WXAPI.ashx" />
     <Content Include="ViewV5\images\qrcode.png" />
+    <Content Include="View_Mobile\CSS\login.css" />
     <Content Include="View_Mobile\JS\avalon1.47.js" />
+    <Content Include="View_Mobile\UI\UI_Login.html" />
     <Content Include="WZWeb\CSS\bootstrap.css" />
     <Content Include="WZWeb\CSS\dialog.css" />
     <Content Include="WZWeb\CSS\font-awesome.min.css" />
